--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.7.0",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
