--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@egjs/flicking": "^4.14.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "firebase": "^12.2.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
